/**
 ******************  Script Configuration ******************
 */
buildscript {
  repositories {
    jcenter()

    maven {
      url "http://sandec.bintray.com/repo"
    }
  }

  dependencies {
    classpath 'com.sandec.jpro:jpro-plugin-gradle:2019.1.2'
  }
}


/**
 ******************  Java Configuration ******************
 */
apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'com.google.osdetector'

compileJava {
  sourceCompatibility = 1.8
  targetCompatibility = 1.8
}

repositories {
  jcenter()
  mavenCentral()
}

ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os

dependencies {

    // Use JUnit test framework
    testImplementation 'junit:junit:4.12' 
   
    // Let gradle find mysql connector
    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.17'
    runtime "mysql:mysql-connector-java:8.0.17.jar"
    
    
    // Add your dependencies here, for example:
//     compile group: 'org.controlsfx', name: 'controlsfx', version: '8.40.14'
    
    // We are not using Java 11:
    /*
    compile "org.openjfx:javafx-base:11:$platform"
    compile "org.openjfx:javafx-graphics:11:$platform"
    compile "org.openjfx:javafx-controls:11:$platform"
    compile "org.openjfx:javafx-fxml:11:$platform"
    compile "org.openjfx:javafx-media:11:$platform"
    compile "org.openjfx:javafx-web:11:$platform"
    */
}


/*
compileJava {
  doFirst {
    options.compilerArgs = [
           // Need Java 11 for --module
            '--module-path', classpath.asPath,
            '--add-modules', 'javafx.fxml,javafx.controls'
    ]
  }
}


run {
  doFirst {
    jvmArgs = [
              // Need Java 11 for --module

           '--module-path', classpath.asPath,
           '--add-modules', 'javafx.fxml,javafx.controls'
    ]
  }
}
*/


/**
 ******************  jpro Configuration ******************
 */
apply plugin: 'com.sandec.jpro'


/**
 * App Main Class
 */
//mainClassName = 'com.jpro.hellojpro.HelloJPro'
mainClassName = 'Main'

/**
 * jpro settings
 */
jpro {
  // for debugging
  // JVMArgs << '-agentlib:jdwp=transport=dt_socket,server=n,address=5006,suspend=y'

  JVMArgs << '-Xmx1000m'

  //jpro server port
  port = 8080

}
